--- a/site/package.json
+++ b/site/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
+    "@web3modal/ethers5": "^4.0.13",
+    "ethers": "^5.7.2",
     "framer-motion": "^11.0.8",
     "next": "14.1.3",
+    "package.json": "^2.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
