--- a/client/cli/Cargo.toml
+++ b/client/cli/Cargo.toml
@@ -13,3 +13,7 @@ ssh = "0.1.4"
 ssh2 = "0.9.4"
 kademlia_dht = { path = "../../dht/" }
 console = "0.15.8"
+dotenv = "0.15.0"
+reqwest = "0.11.25"
+serde_json = "1.0.114"
+tokio = "1.36.0"
